--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "test:unit": "jest"
   },
   "gitHooks": {
+    "commit-msg": "echo '123'",
     "pre-commit": "lint-staged",
     "pre-push": "npm run test:unit"
   },
@@ -30,18 +31,19 @@
     "@babel/preset-typescript": "^7.14.5",
     "@types/jest": "^26.0.24",
     "@types/node": "^16.4.10",
+    "@typescript-eslint/eslint-plugin": "^4.15.2",
+    "@typescript-eslint/parser": "^4.15.2",
     "@vitejs/plugin-vue": "^1.3.0",
     "@vue/compiler-sfc": "^3.0.5",
-    "eslint": "^7.20.0",
-    "eslint-plugin-vue": "^7.6.0",
-    "eslint-plugin-prettier": "^3.3.1",
-    "@vue/eslint-config-typescript": "^7.0.0",
     "@vue/eslint-config-prettier": "^6.0.0",
-    "@typescript-eslint/parser": "^4.15.2",
-    "@typescript-eslint/eslint-plugin": "^4.15.2",
+    "@vue/eslint-config-typescript": "^7.0.0",
+    "@vue/test-utils": "^2.0.0-rc.11",
     "autoprefixer": "^10.2.5",
-    "jest": "26.6.3",
     "babel-jest": "26.6.3",
+    "eslint": "^7.20.0",
+    "eslint-plugin-prettier": "^3.3.1",
+    "eslint-plugin-vue": "^7.6.0",
+    "jest": "26.6.3",
     "lint-staged": "^10.5.4",
     "postcss": "8.1.0",
     "prettier": "^2.2.1",
@@ -50,7 +52,7 @@
     "typescript": "^4.3.5",
     "vite": "^2.4.4",
     "vue-jest": "^5.0.0-alpha.10",
-    "@vue/test-utils": "^2.0.0-rc.11",
-    "vue-tsc": "^0.2.2"
+    "vue-tsc": "^0.2.2",
+    "yorkie": "^2.0.0"
   }
 }
