--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "test:unit": "jest"
   },
   "gitHooks": {
-    "commit-msg": "echo '123'",
+    "commit-msg": "node script/verify-commit-msg.js",
     "pre-commit": "lint-staged",
     "pre-push": "npm run test:unit"
   },
@@ -40,6 +40,7 @@
     "@vue/test-utils": "^2.0.0-rc.11",
     "autoprefixer": "^10.2.5",
     "babel-jest": "26.6.3",
+    "chalk": "^4.1.2",
     "eslint": "^7.20.0",
     "eslint-plugin-prettier": "^3.3.1",
     "eslint-plugin-vue": "^7.6.0",
