--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "vite2-vue3",
+  "name": "my-vue-app",
   "version": "0.0.0",
   "license": "MIT",
   "scripts": {
@@ -8,12 +8,14 @@
     "serve": "vite preview",
     "lint": "eslint --ext .js,ts,vue src/** --no-error-on-unmatched-pattern",
     "lint:fix": "eslint --ext .js,ts,vue src/** --no-error-on-unmatched-pattern --fix",
-    "test:unit": "jest"
+    "test-unit": "jest",
+    "test-e2e": "cypress open",
+    "test-e2e-ci":"cypress run",
+    "test":"yarn test-unit && yarn test-e2e-ci"
   },
   "gitHooks": {
-    "commit-msg": "node script/verify-commit-msg.js",
     "pre-commit": "lint-staged",
-    "pre-push": "npm run test:unit"
+    "pre-push": "npm run test"
   },
   "lint-staged": {
     "*.{js,ts,vue}": "eslint --fix"
@@ -40,7 +42,7 @@
     "@vue/test-utils": "^2.0.0-rc.11",
     "autoprefixer": "^10.2.5",
     "babel-jest": "26.6.3",
-    "chalk": "^4.1.2",
+    "cypress": "^8.2.0",
     "eslint": "^7.20.0",
     "eslint-plugin-prettier": "^3.3.1",
     "eslint-plugin-vue": "^7.6.0",
@@ -53,7 +55,6 @@
     "typescript": "^4.3.5",
     "vite": "^2.4.4",
     "vue-jest": "^5.0.0-alpha.10",
-    "vue-tsc": "^0.2.2",
-    "yorkie": "^2.0.0"
+    "vue-tsc": "^0.2.2"
   }
 }
