--- a/package.json
+++ b/package.json
@@ -10,8 +10,8 @@
     "lint:fix": "eslint --ext .js,ts,vue src/** --no-error-on-unmatched-pattern --fix",
     "test-unit": "jest",
     "test-e2e": "cypress open",
-    "test-e2e-ci":"cypress run",
-    "test":"yarn test-unit && yarn test-e2e-ci"
+    "test-e2e-ci": "cypress run",
+    "test": "yarn test-unit && yarn test-e2e-ci"
   },
   "gitHooks": {
     "pre-commit": "lint-staged",
@@ -55,6 +55,7 @@
     "typescript": "^4.3.5",
     "vite": "^2.4.4",
     "vue-jest": "^5.0.0-alpha.10",
-    "vue-tsc": "^0.2.2"
+    "vue-tsc": "^0.2.2",
+    "yorkie": "^2.0.0"
   }
 }
