--- a/.eslintrc
+++ b/.eslintrc
@@ -18,5 +18,10 @@
   "rules": {
     "@typescript-eslint/explicit-module-boundary-types": "off",
     "@typescript-eslint/no-explicit-any": ["off"]
+    // "prettier/prettier":[
+    //   {
+    //     "trailingComma":"es5"
+    //   }
+    // ]
   }
 }
