--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "*.{js,ts,vue}": "eslint --fix"
   },
   "dependencies": {
+    "@tinymce/tinymce-vue": "^4.0.4",
     "axios": "^0.21.1",
     "element3": "^0.0.40",
     "mockjs": "^1.1.0",
