--- a/package.json
+++ b/package.json
@@ -5,15 +5,24 @@
   "scripts": {
     "dev": "vite",
     "build": "vue-tsc --noEmit && vite build",
-    "serve": "vite preview"
+    "serve": "vite preview",
+    "test:unit": "jest"
   },
   "dependencies": {
     "vue": "^3.0.5"
   },
   "devDependencies": {
+    "@babel/preset-env": "7.14.9",
+    "@babel/preset-typescript": "7.14.5",
+    "@types/jest": "26.0.24",
     "@vitejs/plugin-vue": "^1.3.0",
+    "@vue/test-utils": "^2.0.0-rc.16",
+    "babel-jest": "26.6.3",
+    "jest": "26.6.3",
+    "ts-jest": "26.5.6",
     "typescript": "^4.3.5",
     "vite": "^2.4.4",
+    "vue-jest": "^5.0.0-alpha.10",
     "vue-tsc": "^0.2.2"
   }
 }
