--- a/package.json
+++ b/package.json
@@ -6,7 +6,10 @@
     "dev": "vite",
     "build": "vue-tsc --noEmit && vite build",
     "serve": "vite preview",
-    "test:unit": "jest"
+    "test-unit": "jest",
+    "test-e2e":"cypress open",
+    "test-e2e-ci":"cypress run",
+    "test":"npm run test-unit && npm run test-e2e-ci"
   },
   "dependencies": {
     "vue": "^3.0.5"
@@ -18,6 +21,7 @@
     "@vitejs/plugin-vue": "^1.3.0",
     "@vue/test-utils": "^2.0.0-rc.16",
     "babel-jest": "26.6.3",
+    "cypress": "8.2.0",
     "jest": "26.6.3",
     "ts-jest": "26.5.6",
     "typescript": "^4.3.5",
