--- a/package.json
+++ b/package.json
@@ -7,10 +7,18 @@
     "build": "vue-tsc --noEmit && vite build",
     "serve": "vite preview",
     "test-unit": "jest",
-    "test-e2e":"cypress open",
-    "test-e2e-ci":"cypress run",
-    "test":"npm run test-unit && npm run test-e2e-ci"
+    "test-e2e": "cypress open",
+    "test-e2e-ci": "cypress run",
+    "test": "npm run test-unit && npm run test-e2e-ci",
+    "lint": "eslint --ext .ts,vue src/**",
+    "lint:fix": "eslint --ext .ts,vue src/** --fix"
   },
+"gitHooks": {
+  "pre-commit": "lint-staged"
+},
+"lint-staged": {
+  "*.{ts,vue}": "eslint --fix"
+},
   "dependencies": {
     "vue": "^3.0.5"
   },
@@ -18,11 +26,17 @@
     "@babel/preset-env": "7.14.9",
     "@babel/preset-typescript": "7.14.5",
     "@types/jest": "26.0.24",
+    "@typescript-eslint/eslint-plugin": "4.15.2",
+    "@typescript-eslint/parser": "4.15.2",
     "@vitejs/plugin-vue": "^1.3.0",
+    "@vue/eslint-config-typescript": "7.0.0",
     "@vue/test-utils": "^2.0.0-rc.16",
     "babel-jest": "26.6.3",
     "cypress": "8.2.0",
+    "eslint": "7.20.0",
+    "eslint-plugin-vue": "7.6.0",
     "jest": "26.6.3",
+    "lint-staged": "11.1.2",
     "ts-jest": "26.5.6",
     "typescript": "^4.3.5",
     "vite": "^2.4.4",
