--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "vite-vue3-ts-jest-cypress-eslint",
+  "name": "vite-vue3-ts-jest-cypress-eslint-prettier",
   "version": "0.0.0",
   "license": "MIT",
   "scripts": {
@@ -17,7 +17,8 @@
     "pre-commit": "lint-staged"
   },
   "lint-staged": {
-    "*.{ts,vue}": "eslint --fix"
+    "*.{ts,vue}": "eslint --fix",
+    "*": "prettier -w -u"
   },
   "dependencies": {
     "vue": "^3.0.5"
@@ -29,14 +30,17 @@
     "@typescript-eslint/eslint-plugin": "4.15.2",
     "@typescript-eslint/parser": "4.15.2",
     "@vitejs/plugin-vue": "^1.3.0",
+    "@vue/eslint-config-prettier": "6.0.0",
     "@vue/eslint-config-typescript": "7.0.0",
     "@vue/test-utils": "^2.0.0-rc.16",
     "babel-jest": "26.6.3",
     "cypress": "8.2.0",
     "eslint": "7.20.0",
+    "eslint-plugin-prettier": "3.3.1",
     "eslint-plugin-vue": "7.6.0",
     "jest": "26.6.3",
     "lint-staged": "11.1.2",
+    "prettier": "2.2.1",
     "ts-jest": "26.5.6",
     "typescript": "^4.3.5",
     "vite": "^2.4.4",
