--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "vite-vue3-ts-jest-cypress-eslint-prettier",
+  "name": "vite-vue3-ts-jest-cypress-eslint-prettier-commit-msg",
   "version": "0.0.0",
   "license": "MIT",
   "scripts": {
@@ -14,6 +14,7 @@
     "lint:fix": "eslint --ext .ts,vue src/** --fix"
   },
   "gitHooks": {
+    "commit-msg": "node scripts/verify-commit-msg.js",
     "pre-commit": "lint-staged"
   },
   "lint-staged": {
@@ -34,6 +35,7 @@
     "@vue/eslint-config-typescript": "7.0.0",
     "@vue/test-utils": "^2.0.0-rc.16",
     "babel-jest": "26.6.3",
+    "chalk": "^4.1.2",
     "cypress": "8.2.0",
     "eslint": "7.20.0",
     "eslint-plugin-prettier": "3.3.1",
