refactor: Tinymce.vue代码优化，修复vue/script-setup-uses-vars警告

--- a/.eslintrc
+++ b/.eslintrc
@@ -17,7 +17,8 @@
   },
   "rules": {
     "@typescript-eslint/explicit-module-boundary-types": "off",
-    "@typescript-eslint/no-explicit-any": ["off"]
+    "@typescript-eslint/no-explicit-any": ["off"],
+    "vue/script-setup-uses-vars":["off"]
     // "prettier/prettier":[
     //   {
     //     "trailingComma":"es5"
