--- a/.eslintrc
+++ b/.eslintrc
@@ -16,6 +16,7 @@
     "ecmaVersion": 2021
   },
   "rules": {
+    "@typescript-eslint/no-var-requires": 0,
     "@typescript-eslint/explicit-module-boundary-types": "off",
     "@typescript-eslint/no-explicit-any": ["off"],
     "vue/script-setup-uses-vars":["off"]
