--- a/.eslintrc
+++ b/.eslintrc
@@ -19,7 +19,8 @@
     "@typescript-eslint/no-var-requires": 0,
     "@typescript-eslint/explicit-module-boundary-types": "off",
     "@typescript-eslint/no-explicit-any": ["off"],
-    "vue/script-setup-uses-vars":["off"]
+    "vue/script-setup-uses-vars": ["off"],
+    "multiline-ternary": 0
     // "prettier/prettier":[
     //   {
     //     "trailingComma":"es5"
