--- a/.eslintrc
+++ b/.eslintrc
@@ -5,13 +5,7 @@
     "node": true,
     "es2021": true
   },
-  "extends": [
-    "plugin:vue/vue3-recommended",
-    "eslint:recommended",
-    "@vue/typescript/recommended",
-    "@vue/prettier",
-    "@vue/prettier/@typescript-eslint"
-  ],
+  "extends": ["plugin:vue/vue3-recommended", "eslint:recommended", "@vue/typescript/recommended", "@vue/prettier", "@vue/prettier/@typescript-eslint"],
   "parserOptions": {
     "ecmaVersion": 2021
   },
