--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "vite-vue3-ts-jest-cypress-eslint-prettier-commit-msg-alias-vue-router-vuex-element3",
+  "name": "vite-vue3-ts-jest-cypress-eslint-prettier-commit-msg-alias-vue-router-vuex-element3-axios-mockjs-sass",
   "version": "0.0.0",
   "license": "MIT",
   "scripts": {
@@ -23,7 +23,9 @@
     "*": "prettier -w -u"
   },
   "dependencies": {
+    "axios": "^0.23.0",
     "element3": "^0.0.40",
+    "mockjs": "1.1.0",
     "vue": "^3.0.5",
     "vue-router": "^4.0.12",
     "vuex": "^4.0.2"
@@ -47,9 +49,11 @@
     "jest": "26.6.3",
     "lint-staged": "11.1.2",
     "prettier": "2.2.1",
+    "sass": "^1.43.2",
     "ts-jest": "26.5.6",
     "typescript": "^4.3.5",
     "vite": "^2.4.4",
+    "vite-plugin-mock": "2.9.4",
     "vue-jest": "^5.0.0-alpha.10",
     "vue-tsc": "^0.2.2",
     "yorkie": "2.0.0"
