--- a/.eslintrc
+++ b/.eslintrc
@@ -14,12 +14,6 @@
     "@typescript-eslint/explicit-module-boundary-types": "off",
     "@typescript-eslint/no-explicit-any": ["off"],
     "vue/script-setup-uses-vars": ["off"],
-    "multiline-ternary": 0,
-    "prettier/prettier": [
-      {
-        "printWidth": 160,
-        "trailingComma": "es5"
-      }
-    ]
+    "multiline-ternary": 0
   }
 }
