--- a/.eslintrc
+++ b/.eslintrc
@@ -5,7 +5,13 @@
     "node": true,
     "es2021": true
   },
-  "extends": ["plugin:vue/vue3-recommended", "eslint:recommended", "@vue/typescript/recommended", "@vue/prettier", "@vue/prettier/@typescript-eslint"],
+  "extends": [
+    "plugin:vue/vue3-recommended",
+    "eslint:recommended",
+    "@vue/typescript/recommended",
+    "@vue/prettier",
+    "@vue/prettier/@typescript-eslint"
+  ],
   "parserOptions": {
     "ecmaVersion": 2021
   },
@@ -14,6 +20,7 @@
     "@typescript-eslint/explicit-module-boundary-types": "off",
     "@typescript-eslint/no-explicit-any": ["off"],
     "vue/script-setup-uses-vars": ["off"],
-    "multiline-ternary": 0
+    "multiline-ternary": 0,
+    "prettier/prettier": "error"
   }
 }
