--- a/.eslintrc
+++ b/.eslintrc
@@ -16,11 +16,21 @@
     "ecmaVersion": 2021
   },
   "rules": {
-    "@typescript-eslint/no-var-requires": 0,
+    // ts每个函数都要显式声明返回值
     "@typescript-eslint/explicit-module-boundary-types": "off",
+    // 关闭 ts any type 校验
     "@typescript-eslint/no-explicit-any": ["off"],
-    "vue/script-setup-uses-vars": ["off"],
-    "multiline-ternary": 0,
-    "prettier/prettier": "error"
+    // 忽略 Require statement not part of import statement.
+    "@typescript-eslint/no-var-requires": "off",
+    // 在数组开括号后和闭括号前强制换行
+    "array-bracket-newline": "off",
+    // 强制数组元素间出现换行
+    "array-element-newline": "off",
+    // 要求或禁止在三元操作数中间换行
+    "multiline-ternary": "off",
+    // 要求或禁止在变量声明周围换行
+    "one-var-declaration-per-line": "off",
+    // 强制操作符使用一致的换行符
+    "operator-linebreak": "off"
   }
 }
