--- a/tsconfig.json
+++ b/tsconfig.json
@@ -17,6 +17,12 @@
       "@/*": ["src/*"]
     }
   },
-  "include": ["src/**/*.ts", "src/**/*.d.ts", "src/**/*.tsx", "src/**/*.vue", "tests/unit/*.ts"],
+  "include": [
+    "src/**/*.ts",
+    "src/**/*.d.ts",
+    "src/**/*.tsx",
+    "src/**/*.vue",
+    "tests/unit/*.ts"
+  ],
   "exclude": ["node_modules", "tests/e2e/*"]
 }
